# AIandMLcourse_sungjun

./: .cursorrules  .gitignore  README.md  course.md  directory.md  main.py  pyproject.toml
budget-app/: .env.local.example  index.html  package-lock.json  package.json  vercel.json
budget-app/tests/: webhook.test.js
docs/: 삽질기록.md
physics-web/: main.py  requirements.txt
physics-web/routers/: pages.py
physics-web/templates/: base.html  index.html  research.html
skills/vibe-coder-context-checkpoint/: SKILL.md  SKILL_KR.md  VERIFY_TEMPLATE.md
week1/: 00_hello_world.py  01_hello_nn.py  02_polynomial_fitting.py  hw1.md  week1.md
week1/guides/: generate_pdfs.py
week2/: 01_linear_regression_spring.py  02_unsupervised_clustering.py  03_data_preprocessing.py  04_gradient_descent_vis.py  week2.md
week2/ex/: 01_spring_scipy.py  04_optimization_scipy.py
week3/: 01_perceptron.py  02_activation_functions.py  03_forward_propagation.py  04_mlp_numpy.py  05_universal_approximation.py  check_fonts.py  week3.md  week3_app.py
week4/: 01perfect1d.py  02projectile.py  03overfitting.py  04pendulum.py  week4.md  week4_app.py
week5/: 01_regularization.py  02_overfitting_underfitting.py  03_data_augmentation.py  04_transfer_learning.py  05_mnist_cnn.py  week5.md
week6/: 01_attention_basics.py  02_self_attention.py  03_positional_encoding.py  04_transformer_block.py  05_sequence_modeling.py  run.bat  week6.md
week7/: 01_tokens_and_embeddings.py  02_gpt_bert_architectures.py  03_pretraining_finetuning.py  04_claude_api_simple.py  run.bat  week7.md
(+17 files in other folders)
